# OmniGrip

./: Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml
skills/omnigrip-computer-control/: SKILL.md
src/: lib.rs  main.rs
src/adapter/: cli.rs  mcp_server.rs  mod.rs
src/application/: action_service.rs  context_service.rs  mod.rs  ocr_service.rs  vision_service.rs
src/domain/: action.rs  context.rs  mod.rs  ocr.rs  vision.rs
src/infrastructure/: clipboard.rs  enigo_input.rs  image_proc.rs  macos_permissions.rs  mod.rs  ocr_engine.rs  permissions.rs  window.rs  xcap_capture.rs
