[package]
name = "omni-grip"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP & Async
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Vision & Action
xcap = "0.8.3"
enigo = "0.3"
image = "0.25"
base64 = "0.22"

# OCR
ocr-rs = "2.2.1"
strsim = "0.10"  # 模糊匹配

# CLI
clap = { version = "4", features = ["derive"] }

# Context & Utils
arboard = "3.3"                                                     # 剪贴板
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
accessibility-ng = "0.1"
core-graphics = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
ashpd = "0.8"  # Wayland 支持
